# anv

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
packaging/chocolatey/: README.md  anv.nuspec
packaging/chocolatey/legal/: VERIFICATION.txt
packaging/chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
src/: cache.rs  cli.rs  config.rs  history.rs  lib.rs  main.rs  player.rs  progression.rs  prompt.rs  types.rs
src/adapters/: mal_client.rs  mod.rs  player.rs  reader.rs
src/adapters/providers/: mod.rs  ports.rs
src/adapters/reader/: cache.rs  mod.rs  proxy.rs  reader.rs
src/commands/: history.rs  mod.rs  play_anime.rs  read_manga.rs  sync_mal.rs
src/providers/: allanime.rs  mangadex.rs  mangapill.rs  mod.rs
src/types/: media.rs  mod.rs  provider.rs  stream.rs  translation.rs
