[package]
name = "anv"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Vedant-Asati03/anv"
description = "Stream subbed or dubbed anime from AllAnime straight into mpv from your terminal."
keywords = ["anime", "cli", "streaming", "mpv"]
categories = ["command-line-utilities", "multimedia::video"]
authors = ["Vedant Asati"]
rust-version = "1.85"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
dialoguer = "0.12.0"
dirs-next = "2.0.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.39", features = ["serde"] }
